# space

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
src/field_worker/: admin.py  apps.py  models.py  serializers.py  views.py
src/field_worker/migrations/: 0001_initial.py
src/field_worker/tests/: conftest.py  test_api.py
src/space/: settings.py  urls.py
